--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </th>
                     <th style="padding-right: 15px;">
                         <p>
-                            We've got arguably the best merch in existance. From NewRinaldi Sliders to NewRinaldi Mugs to
+                            We've got arguably the best merch in existance. From NewRinaldi Tops to
                             NewRinaldi Hoodies, we've got literally everything. <br/> <br/> <br/> <br/> <br/> <br/> <br/>
                         </p>
                     </th>
