--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </tr>
             </table>
             <p>
-                (beanz)
+                (Created by Tinbob655 and Vinyl5five)
             </p>
         </div>
     </body>
