The image in centered
Its so goddam central

--- a/Merch.html
+++ b/Merch.html
@@ -45,7 +45,7 @@
                      it anyway cause NewRinaldi
                 </a>
             </p>
-            <img src="images/Background Images/Logo Dark.png" style="height: 350px; display:block; margin-right: auto; margin-right: auto;"/>
+            <img src="images/Background Images/Logo Dark.png" style="height: 350px; display:block; margin-right: auto; margin-left: auto;"/>
         </div>
     </body>
 </html>
