--- a/Music.html
+++ b/Music.html
@@ -57,6 +57,11 @@
                     </td>
                 </tr>
                 <tr>
+                    <td colapsan="2">
+                        <p>
+                            Will R Comp 1
+                        </p>
+                    </td>
                     <td>
                         <audio controls controlslist="nodownload" loop style="float: right;">
                             <source src="Music/Will R Comp 1.mp3" type="audio/mp3"/>
@@ -67,6 +72,11 @@
                     </td>
                 </tr>
                 <tr>
+                    <td colspawn="2">
+                        <p>
+                            Alex Comp 1 V2
+                        </p>
+                    </td>
                     <td>
                         <img src="images/Album Covers/Alex Comp 1 V2 Image.png" style="float: right;" class="rounded"/>
                     </td>
