Added and integrated mobile pages

--- a/Media.html
+++ b/Media.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>
-            NewRinaldi/Media
+            NewRinaldi.site/Media
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
+        <script>
+            if (window.innerWidth <= 700) {
+                document.location ="media-mobile.html";
+            }
+        </script>
     </head>
     <body style="background-color: #232324;">
         <!--START OF HEADER-->
@@ -17,14 +22,14 @@
                         </a>
                     </h2>
                 </th>
-                <th class="link" style="width: 33%;">
+                <th class="link">
                     <h2>
                         <a href="Music.html" class="link">
                             Music
                         </a>
                     </h2>
                 </th>
-                <th class="link" style="width: 33%;">
+                <th class="link">
                     <h2>
                         <a href="Merch.html" class="link">
                             Merch
