--- a/Music.html
+++ b/Music.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>
-            NewRinaldi/Music
+            NewRinaldi.site/Music
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
+        <script>
+            if (window.innerWidth <= 700) {
+                document.location = "music-mobile.html";
+            }
+        </script>
     </head>
     <body style="background-color: #232324;">
         <!--START OF HEADER-->
@@ -17,14 +22,14 @@
                         </a>
                     </h2>
                 </th>
-                <th style="width: 33%;" class="link">
+                <th class="link">
                     <h2 style="color: #e6d735;">
                         <a href="index.html" class="link">
                             Home
                         </a>
                     </h2>
                 </th>
-                <th style="width: 33%;" class="link">
+                <th class="link">
                     <h2>
                         <a href="Merch.html" class="link">
                             Merch
