--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
             NewRinaldi.site
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
+        <script>
+            if (window.innerWidth <= 700) {
+                document.location ="index-mobile.html";
+            }
+        </script>
     </head>
     <body style="background-color: #232324;">
         <!--START OF HEADER-->
@@ -17,14 +22,14 @@
                         </a>
                     </h2>
                 </th>
-                <th class="link" style="width: 33%;">
+                <th class="link">
                     <h2>
                         <a href="Music.html" class="link">
                             Music
                         </a>
                     </h2>
                 </th>
-                <th class="link" style="width: 33%;">
+                <th class="link">
                     <h2>
                         <a href="Merch.html" class="link">
                             Merch
@@ -66,7 +71,7 @@
                 </tr>
             </table>
             <p>
-                (beanz)
+                Founded by Hayden and Will
             </p>
         </div>
     </body>
