Mobile pages now link correctly

--- a/media-mobile.html
+++ b/media-mobile.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script>
             if (window.innerWidth > 700) {
-                document.location ="media.html";
+                document.location ="Media.html";
             }
         </script>
     </head>
