--- a/merch-mobile.html
+++ b/merch-mobile.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script>
             if (window.innerWidth > 700) {
-                document.location = "merch.html";
+                document.location = "Merch.html";
             }
         </script>
     </head>
