--- a/music-mobile.html
+++ b/music-mobile.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script>
             if (window.innerWidth > 700) {
-                document.location = "music.html";
+                document.location = "Music.html";
             }
         </script>
     </head>
