Founders added to bottom

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </tr>
             </table>
             <p>
-                (beanz)
+                Founded by tinbob655 and Vinyl5five
             </p>
         </div>
     </body>
