Index-mobile is done

--- a/index-mobile.html
+++ b/index-mobile.html
@@ -11,4 +11,68 @@
             }
         </script>
     </head>
+    <body>
+        <!--START OF HEADER-->
+        <table>
+            <tr style="background-color: #363636; margin-top: 50px;">
+                <th class="link">
+                    <h2>
+                        <a href="media-mobile.html" class="link">
+                            Media
+                        </a>
+                    </h2>
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    <p>
+                        You want example music? We've got example music right bloody here.
+                    </p>
+                </td>
+            </tr>
+            <tr style="background-color: #363636;">
+                <th class="link">
+                    <h2>
+                        <a href="music-mobile.html" class="link">
+                            Music
+                        </a>
+                    </h2>
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    <p>
+                        Links to our music on almost every streaming service on earth. You name it: Spotify, Apple
+                            Music, Instagram, Facebook, TikTok, Resso, Luna, YouTube Music, YouTube, Amazon Music, Twitch
+                            Soundtrack, Pandora, Deezer, Tidal, iHeartRaio, ClaroMusica, Saavn, Boomplay, Anghami, KKBox
+                            NetEase, Tencent, Qobuz, Triller, Joox, Kuack Media, Yandex Music, Adaptr and Flo. How's that
+                            for spreading the brand?
+                    </p>
+                </td>
+            </tr>
+            <tr style="background-color: #363636; margin-top: 20px;">
+                <th class="link">
+                    <h2>
+                        <a href="merch-mobile.html" class="link">
+                            Merch
+                        </a>
+                    </h2>
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    <p>
+                        We've got arguably the best merch in existance. From NewRinaldi Tops to
+                        NewRinaldi Hoodies, we've got literally everything.
+                    </p>
+                </td>
+            </tr>
+        </table>
+        <img src="images/Background Images/Logo Dark.png" style="display: block;
+                                                                 margin-right: auto;
+                                                                  margin-left: auto;"/>
+        <p>
+            Founded by tinbob655 and Vinyl5five
+        </p>
+    </body>
 </html>
