--- a/Merch.html
+++ b/Merch.html
@@ -11,7 +11,7 @@
             }
         </script>
     </head>
-    <body style="background-color: #232324;">
+    <body>
         <!--START OF HEADER-->
         <table class="mainheader">
             <tr style="background-color: #363636;">
