Mobile site integration

--- a/index-mobile.html
+++ b/index-mobile.html
@@ -74,5 +74,8 @@
         <p>
             Founded by tinbob655 and Vinyl5five
         </p>
+        <p>
+            You are viewing a mobile render of NewRinaldi.site
+        </p>
     </body>
 </html>
