--- a/index-mobile.html
+++ b/index-mobile.html
@@ -6,7 +6,7 @@
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script>
-            if (screen.width > 700) {
+            if (window.innerWidth > 700) {
                 document.location ="index.html";
             }
         </script>
