--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             Music, Instagram, Facebook, TikTok, Resso, Luna, YouTube Music, YouTube, Amazon Music, Twitch
                             Soundtrack, Pandora, Deezer, Tidal, iHeartRaio, ClaroMusica, Saavn, Boomplay, Anghami, KKBox
                             NetEase, Tencent, Qobuz, Triller, Joox, Kuack Media, Yandex Music, Adaptr and Flo. How's that
-                            for spreading the brand? <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/>
+                            for spreading the brand? <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/>
                         </p>
                     </th>
                     <th style="padding-right: 15px;">
