--- a/Merch.html
+++ b/Merch.html
@@ -50,7 +50,10 @@
                      it anyway cause NewRinaldi
                 </a>
             </p>
-            <img src="images/Background Images/Logo Dark.png" style="height: 350px; margin-left: 22.5%;"/>
         </div>
+        <img src="images/Background Images/Logo Dark.png" style="height: 350px;
+                                                                 margin-left: auto;
+                                                                  margin-right: auto;
+                                                                  display: block;"/>
     </body>
 </html>
