--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
         <script>
-            if (window.innerWidth <= 700) {
+            if (screen.Width <= 700) {
                 document.location ="index-mobile.html";
             }
         </script>
