--- a/mobile-media.html
+++ b/mobile-media.html
@@ -6,8 +6,8 @@
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script>
-            if (window.innerWidth > 700) {
-                document.location ="Media.html";
+            if (navigator.userAgentData.mobile == false) {
+                document.location = "media.html";
             }
         </script>
     </head>
