--- a/mobile-index.html
+++ b/mobile-index.html
@@ -6,8 +6,8 @@
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script>
-            if (window.innerWidth > 700) {
-                document.location ="index.html";
+            if (navigator.userAgentData.mobile == false) {
+                document.location = "index.html";
             }
         </script>
     </head>
