--- a/mobile-music.html
+++ b/mobile-music.html
@@ -6,8 +6,8 @@
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script>
-            if (window.innerWidth > 700) {
-                document.location = "Music.html";
+            if (navigator.userAgentData.mobile == false) {
+                document.locaiton = "music.html";
             }
         </script>
     </head>
