--- a/mobile-index.html
+++ b/mobile-index.html
@@ -19,7 +19,7 @@
             <tr style="background-color: #363636; margin-top: 50px;">
                 <th class="link">
                     <h2>
-                        <a href="media-mobile.html" class="link">
+                        <a href="mobile-media.html" class="link">
                             Media
                         </a>
                     </h2>
@@ -35,7 +35,7 @@
             <tr style="background-color: #363636;">
                 <th class="link">
                     <h2>
-                        <a href="music-mobile.html" class="link">
+                        <a href="mobile-music.html" class="link">
                             Music
                         </a>
                     </h2>
@@ -55,7 +55,7 @@
             <tr style="background-color: #363636; margin-top: 20px;">
                 <th class="link">
                     <h2>
-                        <a href="merch-mobile.html" class="link">
+                        <a href="mobile-merch.html" class="link">
                             Merch
                         </a>
                     </h2>
@@ -70,9 +70,7 @@
                 </td>
             </tr>
         </table>
-        <img src="images/Background Images/Logo Dark.png" style="display: block;
-                                                                 margin-right: auto;
-                                                                  margin-left: auto;"/>
+        <img src="images/Background Images/Logo Dark.png" class="centered"/>
         <p>
             Founded by tinbob655 and Vinyl5five
         </p>
