--- a/mobile-media.html
+++ b/mobile-media.html
@@ -5,10 +5,37 @@
             NewRinaldi.site/Media
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
+        <!--COMMENTED OUT JS
         <script>
             if (navigator.userAgentData.mobile == false) {
                 document.location = "media.html";
             }
         </script>
+        -->
+        <script src="scripts.js"></script>
     </head>
+    <body>
+        <div style="width: 15%; float: left;">
+            <button onclick="toggle_dropdown_menu()" class="dropdown-button" style="border: none;">
+                <img src="images/Back button.png" style="max-width: 100%; height: auto;"/>
+            </button>
+            <div id="menu-dropdown" class="dropdown-content hide-dropdown">
+                <h2 style="color: #e6d735;">
+                    <a href="mobile-index.html" class="link">
+                        Home
+                    </a>
+                </h2>
+                <h2>
+                    <a href="mobile-music.html" class="link">
+                        Music
+                    </a>
+                </h2>
+                <h2>
+                    <a herf="mobile-merch.html" class="link">
+                        Merch
+                    </a>
+                </h2>
+            </div>
+        </div>
+    </body>
 </html>
