--- a/media.html
+++ b/media.html
@@ -24,14 +24,14 @@
                 </th>
                 <th class="link">
                     <h2>
-                        <a href="Music.html" class="link">
+                        <a href="music.html" class="link">
                             Music
                         </a>
                     </h2>
                 </th>
                 <th class="link">
                     <h2>
-                        <a href="Merch.html" class="link">
+                        <a href="merch.html" class="link">
                             Merch
                         </a>
                     </h2>
