--- a/merch.html
+++ b/merch.html
@@ -17,14 +17,14 @@
             <tr style="background-color: #363636;">
                 <th class="link">
                     <h2>
-                        <a href="Media.html" class="link">
+                        <a href="media.html" class="link">
                             Media
                         </a>
                     </h2>
                 </th>
                 <th class="link">
                     <h2>
-                        <a href="Music.html" class="link">
+                        <a href="music.html" class="link">
                             Music
                         </a>
                     </h2>
