--- a/music.html
+++ b/music.html
@@ -17,7 +17,7 @@
             <tr style="background-color: #363636;">
                 <th class="link">
                     <h2>
-                        <a href="Media.html" class="link">
+                        <a href="media.html" class="link">
                             Media
                         </a>
                     </h2>
@@ -31,7 +31,7 @@
                 </th>
                 <th class="link">
                     <h2>
-                        <a href="Merch.html" class="link">
+                        <a href="merch.html" class="link">
                             Merch
                         </a>
                     </h2>
