--- a/media.html
+++ b/media.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="stylesheet.css"/>
         <script>
             if (navigator.userAgentData.mobile == false) {
-                document.location = "mobile-meida.html";
+                document.location = "mobile-media.html";
             }
         </script>
     </head>
