--- a/media.html
+++ b/media.html
@@ -6,7 +6,7 @@
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
         <script>
-            if (navigator.userAgentData.mobile == false) {
+            if (navigator.userAgentData.mobile == true) {
                 document.location = "mobile-media.html";
             }
         </script>
