--- a/mobile-media.html
+++ b/mobile-media.html
@@ -19,7 +19,7 @@
             <button onclick="toggle_dropdown_menu()" class="dropdown-button" style="border: none;">
                 <img src="images/Back button.png" style="max-width: 100%; height: auto;"/>
             </button>
-            <div id="menu-dropdown" class="dropdown-content hide-dropdown">
+            <div id="menu-dropdown" class="dropdown-content invisible">
                 <h2 style="color: #e6d735;">
                     <a href="mobile-index.html" class="link">
                         Home
@@ -31,7 +31,7 @@
                     </a>
                 </h2>
                 <h2>
-                    <a herf="mobile-merch.html" class="link">
+                    <a href="mobile-merch.html" class="link">
                         Merch
                     </a>
                 </h2>
