--- a/mobile-music.html
+++ b/mobile-music.html
@@ -10,5 +10,30 @@
                 document.locaiton = "music.html";
             }
         </script>
+        <script src="scripts.js"></script>
     </head>
+    <body>
+        <div style="width: 15%; float: left;">
+            <button onclick="toggle_dropdown_menu()" class="dropdown-button" style="border: none;">
+                <img src="images/Back button.png" style="max-width: 100%; height: auto;"/>
+            </button>
+            <div id="menu-dropdown" class="dropdown-content invisible">
+                <h2 style="color: #e6d735;">
+                    <a href="mobile-index.html" class="link">
+                        Home
+                    </a>
+                </h2>
+                <h2>
+                    <a href="mobile-media.html" class="link">
+                        Media
+                    </a>
+                </h2>
+                <h2>
+                    <a href="mobile-merch.html" class="link">
+                        Merch
+                    </a>
+                </h2>
+            </div>
+        </div>
+    </body>
 </html>
