--- a/mobile-media.html
+++ b/mobile-media.html
@@ -37,5 +37,12 @@
                 </h2>
             </div>
         </div>
+        <div class="fadein">
+            <h1>
+                I'm not going to say the sheer number of services we upload to because I don't want to be
+                here all day. <br/> <br/> Here are a crap ton of links to half the music softwares
+                 on the goddam planet.
+            </h1>
+        </div>
     </body>
 </html>
