Mobile media page complete

--- a/mobile-index.html
+++ b/mobile-index.html
@@ -70,7 +70,7 @@
                 </td>
             </tr>
         </table>
-        <img src="images/Background Images/Logo Dark.png" class="centered"/>
+        <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 600px;"/>
         <p>
             Founded by tinbob655 and Vinyl5five
         </p>
