--- a/mobile-media.html
+++ b/mobile-media.html
@@ -13,6 +13,11 @@
         </script>
         -->
         <script src="scripts.js"></script>
+        <style>
+            div {
+                border-radius: 25px;
+            }
+        </style>
     </head>
     <body>
         <div style="width: 15%; float: left;">
@@ -43,6 +48,46 @@
                 here all day. <br/> <br/> Here are a crap ton of links to half the music softwares
                  on the goddam planet.
             </h1>
+            <div>
+                <p style="margin-top: 100px;">
+                    Spotify innit:
+                </p>
+                <a href="https://open.spotify.com/artist/1dBbc3XltRauSX0dRpRUE6" target="_blank">
+                    <img src="images/Streaming Services/Spotify.png" class="centered"/>
+                </a>
+                <p style="margin-top: 100px;">
+                    We're on ITunes for all you Apple freaks:
+                </p>
+                <a href="https://music.apple.com/us/artist/newrinaldi/1651932292" target="_blank">
+                    <img src="images/Streaming Services/Itunes.png" class="centered"/>
+                </a>
+                <p style="margin-top: 100px;">
+                    Were on deezer cause why not. Resisting the urge to write a deez nuts joke also:
+                </p>
+                <a href="https://www.deezer.com/en/artist/188139577" target="_blank">
+                    <img src="images/Streaming Services/deezer.png" class="centered"/>
+                </a>
+                <p style="margin-top: 100px;">
+                    YouTube music, well not specifically you but generally people tend to tube some music. Usually 
+                    some NewRinaldi:
+                </p>
+                <a href="https://music.youtube.com/channel/UCPm-15v6PGGe5JIcRScKDpw?feature=share" target="_blank">
+                    <img src="images/Streaming Services/Youtube music.png" class="centered"/>
+                </a>
+                <p style="margin-top: 100px;">
+                    We didn't even make this account, but we're on YouTube dispite. Enjoy toons but random tracks
+                    were added cause spek:
+                </p>
+                <a href="https://www.youtube.com/channel/UCPm-15v6PGGe5JIcRScKDpw?app=desktop" target="_blank">
+                    <img src="images/Streaming Services/youtube.svg" class="centered"/>
+                </a>
+            </div>
         </div>
+        <p>
+            Founded by tinbob655 and Vinyl5five
+        </p>
+        <p>
+            You are viewing a mobile render of NewRinaldi.site
+        </p>
     </body>
 </html>
