Mobile merch page complete

--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -37,5 +37,18 @@
                 </h2>
             </div>
         </div>
+        <div class="fadein">
+            <h1>
+                We have a significant quantity of merch of slightly above average quality
+            </h1>
+            <br/>
+            <p>
+                <a href="https://newrinaldi-merch.teemill.com/" target="_blank" class="link">
+                    Click here for merch. It mostly uncomfortable and is subpar in many ways. But you should buy 
+                     it anyway cause NewRinaldi
+                </a>
+            </p>
+            <img src="images/Background Images/Logo Dark.png" class="centered"/>
+        </div>
     </body>
 </html>
