Mobile media page completed

--- a/mobile-media.html
+++ b/mobile-media.html
@@ -82,12 +82,13 @@
                     <img src="images/Streaming Services/youtube.svg" class="centered"/>
                 </a>
             </div>
+            <img src="images/Background Images/Logo Dark.png" class="centered"/>
+            <p>
+                Founded by tinbob655 and Vinyl5five
+            </p>
+            <p>
+                You are viewing a mobile render of NewRinaldi.site
+            </p>
         </div>
-        <p>
-            Founded by tinbob655 and Vinyl5five
-        </p>
-        <p>
-            You are viewing a mobile render of NewRinaldi.site
-        </p>
     </body>
 </html>
