--- a/mobile-music.html
+++ b/mobile-music.html
@@ -35,5 +35,72 @@
                 </h2>
             </div>
         </div>
+        <div class="fadein">
+            <h1>
+                You want music samples, we got music samples. Approximatley one crap ton (three) samples right here:
+            </h1>
+        </div>
+        <div class="fadein">
+            <table style="width: 75%; margin-right: auto; margin-left: auto;">
+                <tr>
+                    <th colspan="2">
+                        <p>
+                            Alex Comp 1
+                        </p>
+                    </th>
+                </tr>
+                <tr>
+                    <td style="width: 50%;">
+                        <img src="images/Album Covers/Alex Comp 1 Image.png" class="rounded" style="float: right;"/>
+                    </td>
+                    <td style="width: 50%;">
+                        <audio controls controlslist="nodownload" loop>
+                            <source src="Music/Alex Comp 1.mp3" type="audio/mp3"/>
+                        </audio>
+                    </td>
+                </tr>
+                <tr>
+                    <th colspan="2">
+                        <p>
+                            Will R Comp 1
+                        </p>
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        <audio controls controlslist="nodownload" loop style="float: right;">
+                            <source src="Music/Will R Comp 1.mp3" type="audio/mp3"/>
+                        </audio>
+                    </td>
+                    <td>
+                        <img src="images/Album Covers/Will R Comp 1 Image.png" class="rounded"/>
+                    </td>
+                </tr>
+                <tr>
+                    <th colspan="2">
+                        <p>
+                            Alex Comp 1 V2
+                        </p>
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="images/Album Covers/Alex Comp 1 V2 Image.png" class="rounded" style="float: right;"/>
+                    </td>
+                    <td>
+                        <audio controls controlslist="nodownload" loop>
+                            <source src="Music/Alex Comp 1 Remix (mp3).mp3" type="audio/mp3"/>
+                        </audio>
+                    </td>
+                </tr>
+            </table>
+            <img src="images/Background Images/Logo Dark.png" class="centered"/>
+            <p>
+                Founded by tinbob655 and Vinyl5five
+            </p>
+            <p>
+                You are viewing a mobile render of NewRinaldi.site
+            </p>
+        </div>
     </body>
 </html>
