Complete mobile integration

--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -15,7 +15,7 @@
         <script src="scripts.js"></script>
     </head>
     <body>
-        <div style="width: 15%; float: left;">
+        <div style="width: 15%; float: left; position: fixed;">
             <button onclick="toggle_dropdown_menu()" class="dropdown-button" style="border: none;">
                 <img src="images/Back button.png" style="max-width: 100%; height: auto;"/>
             </button>
@@ -37,18 +37,65 @@
                 </h2>
             </div>
         </div>
-        <div class="fadein">
-            <h1>
-                We have a significant quantity of merch of slightly above average quality
-            </h1>
-            <br/>
-            <p>
-                <a href="https://newrinaldi-merch.teemill.com/" target="_blank" class="link">
-                    Click here for merch. It mostly uncomfortable and is subpar in many ways. But you should buy 
-                     it anyway cause NewRinaldi
-                </a>
-            </p>
-            <img src="images/Background Images/Logo Dark.png" class="centered"/>
+        <div style="margin-left: 15%;">
+            <div class="fadein">
+                <h1>
+                    We have a significant quantity of merch of slightly above average quality
+                </h1>
+                <br/>
+                <p>
+                    <a href="https://newrinaldi-merch.teemill.com/" target="_blank" class="link">
+                        Click here for merch. It mostly uncomfortable and is subpar in many ways. But you should buy 
+                        it anyway cause NewRinaldi
+                    </a>
+                </p>
+                <table style="width: 75%; margin-right: auto; margin-left: auto; margin-top: 100px;">
+                    <tr>
+                        <th colspan="3">
+                            <h2>
+                                We sell tons of cloth
+                            </h2>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>
+                                From hoodies
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                To t-shirts
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                To funniez
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="images/Merch/White Hoodie.webp" class="centered"/>
+                        </td>
+                        <td>
+                            <img src="images/Merch/Black t-shirt.webp" class="centered"/>
+                        </td>
+                        <td>
+                            <img src="images/Merch/Todd is bad at golf t-shirt.webp" class="centered"/>
+                        </td>
+                    </tr>
+                </table>
+                <div style="margin-top: 100px;">
+                    <img src="images/Background Images/Logo Dark.png" class="centered"/>
+                    <p>
+                        Founded by tinbob655 and Vinyl5five
+                    </p>
+                    <p>
+                        You are viewing a mobile render of NewRinaldi.site
+                    </p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
