--- a/mobile-index.html
+++ b/mobile-index.html
@@ -70,12 +70,14 @@
                 </td>
             </tr>
         </table>
-        <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 600px;"/>
-        <p>
-            Founded by tinbob655 and Vinyl5five
-        </p>
-        <p>
-            You are viewing a mobile render of NewRinaldi.site
-        </p>
+        <div style="margin-top: 100px;">
+            <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 600px;"/>
+            <p>
+                Founded by tinbob655 and Vinyl5five
+            </p>
+            <p>
+                You are viewing a mobile render of NewRinaldi.site
+            </p>
+        </div>
     </body>
 </html>
