--- a/mobile-media.html
+++ b/mobile-media.html
@@ -20,7 +20,7 @@
         </style>
     </head>
     <body>
-        <div style="width: 15%; float: left;">
+        <div style="width: 15%; float: left; position: fixed;">
             <button onclick="toggle_dropdown_menu()" class="dropdown-button" style="border: none;">
                 <img src="images/Back button.png" style="max-width: 100%; height: auto;"/>
             </button>
@@ -42,53 +42,59 @@
                 </h2>
             </div>
         </div>
-        <div class="fadein">
-            <h1>
-                I'm not going to say the sheer number of services we upload to because I don't want to be
-                here all day. <br/> <br/> Here are a crap ton of links to half the music softwares
-                 on the goddam planet.
-            </h1>
-            <div>
-                <p style="margin-top: 100px;">
-                    Spotify innit:
-                </p>
-                <a href="https://open.spotify.com/artist/1dBbc3XltRauSX0dRpRUE6" target="_blank">
-                    <img src="images/Streaming Services/Spotify.png" class="centered"/>
-                </a>
-                <p style="margin-top: 100px;">
-                    We're on ITunes for all you Apple freaks:
-                </p>
-                <a href="https://music.apple.com/us/artist/newrinaldi/1651932292" target="_blank">
-                    <img src="images/Streaming Services/Itunes.png" class="centered"/>
-                </a>
-                <p style="margin-top: 100px;">
-                    Were on deezer cause why not. Resisting the urge to write a deez nuts joke also:
-                </p>
-                <a href="https://www.deezer.com/en/artist/188139577" target="_blank">
-                    <img src="images/Streaming Services/deezer.png" class="centered"/>
-                </a>
-                <p style="margin-top: 100px;">
-                    YouTube music, well not specifically you but generally people tend to tube some music. Usually 
-                    some NewRinaldi:
-                </p>
-                <a href="https://music.youtube.com/channel/UCPm-15v6PGGe5JIcRScKDpw?feature=share" target="_blank">
-                    <img src="images/Streaming Services/Youtube music.png" class="centered"/>
-                </a>
-                <p style="margin-top: 100px;">
-                    We didn't even make this account, but we're on YouTube dispite. Enjoy toons but random tracks
-                    were added cause spek:
-                </p>
-                <a href="https://www.youtube.com/channel/UCPm-15v6PGGe5JIcRScKDpw?app=desktop" target="_blank">
-                    <img src="images/Streaming Services/youtube.svg" class="centered"/>
-                </a>
+        <div style="margin-left: 15%;">
+            <div class="fadein">
+                <h1>
+                    I'm not going to say the sheer number of services we upload to because I don't want to be
+                    here all day.
+                </h1>
+                <h2>
+                    Here are a crap ton of links to every streaming service on the goddam planet (three)
+                </h2>
+                <div>
+                    <p style="margin-top: 100px;">
+                        Spotify innit:
+                    </p>
+                    <a href="https://open.spotify.com/artist/1dBbc3XltRauSX0dRpRUE6" target="_blank">
+                        <img src="images/Streaming Services/Spotify.png" class="centered"/>
+                    </a>
+                    <p style="margin-top: 100px;">
+                        We're on ITunes for all you Apple freaks:
+                    </p>
+                    <a href="https://music.apple.com/us/artist/newrinaldi/1651932292" target="_blank">
+                        <img src="images/Streaming Services/Itunes.png" class="centered"/>
+                    </a>
+                    <p style="margin-top: 100px;">
+                        Were on deezer cause why not. Resisting the urge to write a deez nuts joke also:
+                    </p>
+                    <a href="https://www.deezer.com/en/artist/188139577" target="_blank">
+                        <img src="images/Streaming Services/deezer.png" class="centered"/>
+                    </a>
+                    <p style="margin-top: 100px;">
+                        YouTube music, well not specifically you but generally people tend to tube some music. Usually 
+                        some NewRinaldi:
+                    </p>
+                    <a href="https://music.youtube.com/channel/UCPm-15v6PGGe5JIcRScKDpw?feature=share" target="_blank">
+                        <img src="images/Streaming Services/Youtube music.png" class="centered"/>
+                    </a>
+                    <p style="margin-top: 100px;">
+                        We didn't even make this account, but we're on YouTube dispite. Enjoy toons but random tracks
+                        were added cause spek:
+                    </p>
+                    <a href="https://www.youtube.com/channel/UCPm-15v6PGGe5JIcRScKDpw?app=desktop" target="_blank">
+                        <img src="images/Streaming Services/youtube.svg" class="centered"/>
+                    </a>
+                </div>
+                <div style="margin-top: 100px;">
+                    <img src="images/Background Images/Logo Dark.png" class="centered"/>
+                    <p>
+                        Founded by tinbob655 and Vinyl5five
+                    </p>
+                    <p>
+                        You are viewing a mobile render of NewRinaldi.site
+                    </p>
+                </div>
             </div>
-            <img src="images/Background Images/Logo Dark.png" class="centered"/>
-            <p>
-                Founded by tinbob655 and Vinyl5five
-            </p>
-            <p>
-                You are viewing a mobile render of NewRinaldi.site
-            </p>
         </div>
     </body>
 </html>
