--- a/mobile-music.html
+++ b/mobile-music.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script>
             if (navigator.userAgentData.mobile == false) {
-                document.locaiton = "music.html";
+                document.location = "music.html";
             }
         </script>
         <script src="scripts.js"></script>
