--- a/media.html
+++ b/media.html
@@ -109,6 +109,9 @@
                     </td>
                 </tr>
             </table>
+            <p>
+                Founded by tinbob655 and Vinyl5five
+            </p>
         </div>
     </body>
 </html>
