--- a/merch.html
+++ b/merch.html
@@ -50,10 +50,10 @@
                      it anyway cause NewRinaldi
                 </a>
             </p>
+            <img src="images/Background Images/Logo Dark.png" class="centered"/>
+            <p>
+                Founded by tinbob655 and Vinyl5five
+            </p>
         </div>
-        <img src="images/Background Images/Logo Dark.png" style="height: 350px;
-                                                                 margin-left: auto;
-                                                                  margin-right: auto;
-                                                                  display: block;"/>
     </body>
 </html>
