--- a/music.html
+++ b/music.html
@@ -96,6 +96,9 @@
                     </td>
                 </tr>
             </table>
+            <p>
+                Founded by tinbob655 and Vinyl5five
+            </p>
         </div>
     </body>
 </html>
