Fixed mobile links

--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -24,8 +24,8 @@
                 <br/>
             </h2>
             <h2>
-                <a href="mobile-merch.html" class="link">
-                    Merch
+                <a href="mobile-media.html" class="link">
+                    Media
                 </a>
                 <br/>
                 <br/>
