--- a/mobile-music.html
+++ b/mobile-music.html
@@ -32,8 +32,8 @@
                 <br/>
             </h2>
             <h2>
-                <a href="mobile-music.html" class="link">
-                    Music
+                <a href="mobile-media.html" class="link">
+                    Media
                 </a>
             </h2>
         </div>
