Added contact to footer

--- a/merch.html
+++ b/merch.html
@@ -52,6 +52,9 @@
             </p>
             <img src="images/Background Images/Logo Dark.png" class="centered"/>
             <p>
+                For any questions please contact us at:<br/>newrinaldisings@gmail.com
+            </p>
+            <p>
                 Founded by tinbob655 and Vinyl5five
             </p>
         </div>
