--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -90,6 +90,9 @@
                 <div style="margin-top: 100px;">
                     <img src="images/Background Images/Logo Dark.png" class="centered"/>
                     <p>
+                        For any questions please contact us at:<br/>newrinaldisings@gmail.com
+                    </p>
+                    <p>
                         Founded by tinbob655 and Vinyl5five
                     </p>
                     <p>
