--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 </tr>
             </table>
             <p>
+                For any questions please contact us at:<br/>newrinaldisings@gmail.com
+            </p>
+            <p>
                 Founded by tinbob655 and Vinyl5five
             </p>
         </div>
