--- a/mobile-index.html
+++ b/mobile-index.html
@@ -71,6 +71,9 @@
         <div style="margin-top: 100px;">
             <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 600px;"/>
             <p>
+                For any questions please contact us at:<br/>newrinaldisings@gmail.com
+            </p>
+            <p>
                 Founded by tinbob655 and Vinyl5five
             </p>
             <p>
