Optimised mobile detection

--- a/mobile-index.html
+++ b/mobile-index.html
@@ -5,11 +5,7 @@
             NewRinaldi.site
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
-        <script>
-            if (navigator.userAgentData.mobile == false) {
-                document.location = "index.html";
-            }
-        </script>
+        <script src="mobile-scripts.js"></script>
     </head>
     <body>
         <!--START OF HEADER-->
