--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -5,12 +5,7 @@
             NewRinaldi.site/Merch
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
-        <script>
-            if (navigator.userAgentData.mobile == false) {
-                document.location = "merch.html";
-            }
-        </script>
-        <script src="scripts.js"></script>
+        <script src="mobile-scripts.js"></script>
     </head>
     <body>
         <div id="sidenav" class="sidenav">
