--- a/media.html
+++ b/media.html
@@ -5,11 +5,7 @@
             NewRinaldi.site/Media
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
-        <script>
-            if (navigator.userAgentData.mobile == true) {
-                document.location = "mobile-media.html";
-            }
-        </script>
+        <script src="scripts.js"></script>
     </head>
     <body>
         <!--START OF HEADER-->
