Added Will R Comp 1 V2

--- a/music.html
+++ b/music.html
@@ -91,7 +91,27 @@
                         </audio>
                     </td>
                 </tr>
+                <tr>
+                    <td colspan="2">
+                        <p>
+                            Will R Comp 1 V2
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <audio controls controlslist="nodownload" loop>
+                            <source src="Music/Will-R-Comp-1-Remix-1.MP3" type="audio/mp3"/>
+                        </audio>
+                    </td>
+                    <td>
+                        <img src="images/Album Covers/Will R Comp 1 V2 Image.png" style="float: left" class="rounded"/>
+                    </td>
+                </tr>
             </table>
+            <p>
+                For any questions please contact us at:<br/>newrinaldisings@gmail.com
+            </p>
             <p>
                 Founded by tinbob655 and Vinyl5five
             </p>
