Fixed audio player render error

--- a/mobile-music.html
+++ b/mobile-music.html
@@ -92,6 +92,16 @@
                             </audio>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <audio controls controlslist="nodownload" loop>
+                                <source src="Music/Will-R-Comp-1-Remix-1.MP3" type="audio/mp3" style="float: right;"/>
+                            </audio>
+                        </td>
+                        <td>
+                            <img src="images/Album Covers/Will R Comp 1 V2 Image.png" class="rounded"/>
+                        </td>
+                    </tr>
                 </table>
                 <div style="margin-top: 100px;">
                     <img src="images/Background Images/Logo Dark.png" class="centered"/>
