--- a/music.html
+++ b/music.html
@@ -100,12 +100,12 @@
                 </tr>
                 <tr>
                     <td>
-                        <audio controls controlslist="nodownload" loop>
+                        <audio controls controlslist="nodownload" loop style="float: right;">
                             <source src="Music/Will-R-Comp-1-Remix-1.MP3" type="audio/mp3"/>
                         </audio>
                     </td>
                     <td>
-                        <img src="images/Album Covers/Will R Comp 1 V2 Image.png" style="float: left" class="rounded"/>
+                        <img src="images/Album Covers/Will R Comp 1 V2 Image.png" class="rounded"/>
                     </td>
                 </tr>
             </table>
