Added Will R Comp 1 V2

--- a/mobile-music.html
+++ b/mobile-music.html
@@ -83,6 +83,13 @@
                         </th>
                     </tr>
                     <tr>
+                        <td colspan="2">
+                            <p>
+                                Will R Comp 1 V2
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>
                             <img src="images/Album Covers/Alex Comp 1 V2 Image.png" class="rounded" style="float: right;"/>
                         </td>
