--- a/mobile-media.html
+++ b/mobile-media.html
@@ -43,7 +43,7 @@
                     <p>
                         Spotify innit:
                     </p>
-                    <iframe title="NewRinaldi on Spotify" loading="lazy" src="https://open.spotify.com/embed/artist/1dBbc3XltRauSX0dRpRUE6?utm_source=generator" allow=" clipboard-write; picture-in-picture"></iframe>
+                    <iframe title="NewRinaldi on Spotify" loading="lazy" src="https://open.spotify.com/embed/artist/1dBbc3XltRauSX0dRpRUE6?utm_source=generator" allow=" clipboard-write; picture-in-picture" style="width: 50%; margin-right: auto; margin-left: auto; display: block;"></iframe>
                     
                     <p>
                         We're on ITunes for all you Apple freaks:
